Fix unit sluggishness (#64)
* Only update units from variable cards on blur

* Change math to a view

* Fix css for expandable input button covering text area for value and unit in variable cards

--- a/src/diagram/components/ui/expandable-input.scss
+++ b/src/diagram/components/ui/expandable-input.scss
@@ -35,7 +35,7 @@
     }
     textarea {
       height: 46px;
-      padding: 3px 20px 3px 21px;
+      padding-right: 20px;
       white-space: normal;
     }
   }
